# ComfyUI-GGUF

./: .gitignore  README.md  __init__.py  dequant.py  dequant_triton.py  loader.py  lora.py  nodes.py  ops.py  pyproject.toml  requirements.txt
.github/workflows/: registry.yaml
js/: clip_loader.js
tools/: README.md  convert.py  convert_flux_model.py  convert_gemma2.py  convert_gguf_to_safetensor.py  fix_5d_tensors.py  lcpp.patch  lcpp_chroma.patch  lcpp_sd3.patch  read_tensors.py  tool_auto.py  tool_gradio.py
